[project]
name = "build-your-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "gtts>=2.5.4",
    "openai-agents>=0.2.3",
    "playsound",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "speechrecognition>=3.14.3",
]
